unpackaged/main/default/objects/STWDeliveryMethod__c/STWDeliveryMethod__c.object-meta.xml
<CustomObject>
    <label>STW delivery method</label>
    <nameField>
        <displayFormat>STW-NDM-{00000000}</displayFormat>
        <label>STW Nuremberg delivery method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STW delivery methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>