unpackaged/main/default/objects/STWDeliveryMethod__c/fields/deliveryMethodId__c.field-meta.xml
<CustomField>
    <fullName>deliveryMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Delivery Method</label>
    <referenceTo>OrderDeliveryMethod</referenceTo>
    <relationshipName>STW_Nuremberg_delivery_method</relationshipName>
    <type>Lookup</type>
</CustomField>