unpackaged/main/default/objects/STWDeliveryMethod__c/fields/parentId__c.field-meta.xml
<CustomField>
    <fullName>parentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STW Nuremberg delivery method</label>
    <referenceTo>STWDeliveryMethod__c</referenceTo>
    <relationshipName>STW_Nuremberg_delivery_method</relationshipName>
    <type>Lookup</type>
</CustomField>