unpackaged/main/default/objects/STWDeliveryMethod__c/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>postalCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>