unpackaged/main/default/objects/STWDeliveryMethod__c/fields/storeOrigin__c.field-meta.xml
<CustomField>
    <fullName>storeOrigin__c</fullName>
    <label>storeOrigin</label>
    <length>25</length>
    <type>Text</type>
</CustomField>